--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
       <title>Elizabeth Bott</title>
     </head>
     <body style="background-color:lightblue">
-      <h1 > <font color="black" size="20"><center>Elizabeth Bott</center></font>
-	    <img src="IMG_4365.jpeg" width="400" height="400" alt="Elizabeth Bott Portrait"/>
-	    </h1>
-	    
+      <h1 > <font color="black" size="20"><center>Elizabeth Bott</center></font></h1>
+	<img src="IMG_4365.jpeg" width="400" height="400" alt="Elizabeth Bott Portrait"/>    
       <h2> <font color="black" size="7">A little about me</font></h2>
       <ul> 
         <li>Computer Science Major</li>
