--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
  	<li>Relevant Classes<ul>
 	      <li>EECS 280</li>
 	      <li>EECS 203</li>
+          <li>EECS 281</li>
 	 </ul>
 	<li>Languages<ul>
 	      <li>C++</li>
